--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,20 @@
   },
   "dependencies": {
     "@greatsumini/react-facebook-login": "^3.3.3",
+    "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^10.3.1",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-world-flags": "^1.6.0",
     "redux-persist": "^6.0.0",
     "swiper": "^10.2.0"
   },
