--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@greatsumini/react-facebook-login": "^3.3.3",
     "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^10.3.1",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
