--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "react-world-flags": "^1.6.0",
     "redux-persist": "^6.0.0",
     "swiper": "^10.2.0"
